[gd_scene load_steps=10 format=3 uid="uid://crdil2hcgjn8i"]

[ext_resource type="Script" path="res://Scripts/princess_full.gd" id="1_e76pe"]
[ext_resource type="Texture2D" uid="uid://ca43nx0s8p3wh" path="res://ImageAssets/White.png" id="2_mu430"]
[ext_resource type="Texture2D" uid="uid://b57oky8sv06o6" path="res://ImageAssets/Princess.png" id="3_rvt64"]
[ext_resource type="Script" path="res://Scripts/Vissual_comp.gd" id="4_8n82j"]
[ext_resource type="Texture2D" uid="uid://ccgkyl8nxuuxn" path="res://ImageAssets/You Win.png" id="5_vocsw"]
[ext_resource type="AudioStream" uid="uid://b5hy6mpg7m28j" path="res://Music/Princess.mp3" id="6_pvv5g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkfhs"]
size = Vector2(58, 102)

[sub_resource type="Animation" id="Animation_sbjq6"]
resource_name = "face"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8mt8"]
_data = {
"face": SubResource("Animation_sbjq6")
}

[node name="Princess" type="Area2D"]
script = ExtResource("1_e76pe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wkfhs")

[node name="Temp_Sprite" type="Sprite2D" parent="."]
modulate = Color(0.980392, 0.588235, 1, 1)
scale = Vector2(0.516667, 0.916667)
texture = ExtResource("2_mu430")

[node name="Art_Sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5, 2)
scale = Vector2(0.824121, 0.917197)
texture = ExtResource("3_rvt64")

[node name="Vissual_comp" type="Node2D" parent="."]
script = ExtResource("4_8n82j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="fade" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../Black_Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_r8mt8")
}

[node name="temp_Button4" type="Button" parent="CanvasLayer"]
offset_left = -42.0
offset_top = -31.0
offset_right = 1350.0
offset_bottom = 732.0
flat = true

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(656, 341.25)
scale = Vector2(1.71032, 2.24144)
texture = ExtResource("5_vocsw")

[node name="Black_Sprite2D" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 0)
position = Vector2(637.5, 365.75)
scale = Vector2(11.0083, 6.3875)
texture = ExtResource("2_mu430")

[node name="Giggle_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pvv5g")
volume_db = -8.667

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="button_down" from="CanvasLayer/temp_Button4" to="." method="_on_button_down"]
